name:                transmat
version:             0.1.0.0
synopsis:            ElasticSearch bindings for Haskell
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              Karun Ramakrishnan
maintainer:          karun012@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <4.7, HTTP >=4000.2.8, aeson >=0.7.0.6
  HS-Source-Dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            test.hs
  build-depends:       base >=4.6 && <4.7, HTTP >=4000.2.8, aeson >=0.7.0.6
  HS-Source-Dirs:     test

